    before the PGP signature. Closes: #617923
    Thanks to Roger Leigh for the initial patch.
  * Fix a regression in dpkg-divert where using --rename led to a failure when
    the rename implies crossing file systems. Thanks to Durk Strooisma for
    spotting it.
  * Use the correct mtime when installing a file with statoverrides.
    LP: #739179

  [ Jonathan Nieder ]
  * Remove support for use of synchronous sync(2), due to its pernicious
    side-effects and to ease maintenance.
  * Clarify that an up-to-date dpkg only needs to be unpacked for
    dpkg-maintscript-helper to work.

  [ Steve Langasek ]
  * Add new variables to dpkg-architecture, DEB_HOST_MULTIARCH and
    DEB_BUILD_MULTIARCH, that return the "ideal" GNU triplet for each
    architecture which should be used as the path component for library
    installation.

  [ Mark Hymers ]
  * Add support for Built-Using field. Closes: #619311

  [ Updated programs translations ]
  * German (Sven Joachim).
  * Portuguese (Miguel Figueiredo).
  * Spanish (Javier Fernandez-Sanguino).
  * Swedish (Peter Krefting).

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated dselect translations ]
  * Spanish (Javier Fernandez-Sanguino).

 -- Guillem Jover <guillem@debian.org>  Thu, 29 Jul 2010 11:00:22 +0200

dpkg (1.15.8.10) unstable; urgency=low

  * Do not segfault on “update-alternatives --auto” when the link group only
    has alternatives which are dangling symlinks. Closes: #611545

 -- Guillem Jover <guillem@debian.org>  Sun, 30 Jan 2011 20:28:27 +0100

dpkg (1.15.8.9) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Drop Breaks on konqueror to avoid some lenny -> squeeze upgrade
    problems. It was only needed to ensure install-info is installed
    even for partial upgrades. Closes: #610991