@@ -92,6 +92,9 @@ dpkg (1.16.0) UNRELEASED; urgency=low
     spotting it.
   * Use the correct mtime when installing a file with statoverrides.
     LP: #739179
+  * Add new Package-List field to .dsc files as requested by ftpmasters.
+    It contains a the list of packages that the source builds along with
+    their sections and priorities. Closes: #619131
 
   [ Jonathan Nieder ]
   * Remove support for use of synchronous sync(2), due to its pernicious
